modified:   finding_algo/crypto_model_first.ipynb 	modified:   finding_algo/second.ipynb 	new file:   models/cipher_lstm_model_after_obfuscation.pth 	new file:   obfuscation/__pycache__/obfuscation.cpython-312.pyc 	modified:   obfuscation/obfuscation.py

--- a/finding_algo/crypto_model_first.ipynb
+++ b/finding_algo/crypto_model_first.ipynb
@@ -1201,7 +1201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1213,7 +1213,7 @@
     "\n",
     "# Function to convert ciphertext to sequence of numbers\n",
     "def text_to_sequence(text, max_len=100):\n",
-    "    seq = [char_to_idx.get(char, 0) for char in text]  # Map chars to index\n",
+    "    seq = [char_to_idx.get(char, 0) for char in text]\n",
     "    seq = seq[:max_len] + [0] * (max_len - len(seq))  # Pad/truncate to max_len\n",
     "    return seq\n",
     "\n",
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1263,7 +1263,7 @@
     "        super(CipherLSTM, self).__init__()\n",
     "        self.embedding = nn.Embedding(vocab_size, embed_dim)\n",
     "        self.lstm = nn.LSTM(embed_dim, hidden_dim, batch_first=True)\n",
-    "        self.dropout = nn.Dropout(dropout_prob)  # Dropout layer\n",
+    "        self.dropout = nn.Dropout(dropout_prob)\n",
     "        self.fc = nn.Linear(hidden_dim, num_classes)\n",
     "\n",
     "    def forward(self, x):\n",
